# icp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  icp.cpp  readme.org
config/: config.yaml
easyloggingpp/: log.conf
